--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <blockquote>
         <p>
-          "Sometimes people faile, and that's okay. What matters is that you
+          "Sometimes people fail, and that's okay. What matters is that you
           keep trying." <br />-Sam Ortega
         </p>
       </blockquote>
