--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="https://res.cloudinary.com/dzjkwepju/image/upload/v1638554495/Styckr/S_2_l5vhdr.png"
     />
+    <link rel='stylesheet' href='style.css'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Portfolio</title>
   </head>
