--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       href="https://res.cloudinary.com/dzjkwepju/image/upload/v1638554495/Styckr/S_2_l5vhdr.png"
     />
     <link rel='stylesheet' href='style.css'/>
+    <style>
+      body {
+        background-color: rgb(119, 75, 49);
+      }
+      </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Portfolio</title>
   </head>
@@ -29,14 +34,14 @@
           websites. I'm a team player, and take charge when it's needed. The
           unknown is does not intimidate me. In fact I love the challenge and
           welcome it.
-          <a href="https://github.com/Alsm867"
+          <a href="https://github.com/Alsm867" class='please'
           >My G-hub Link<img
             src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101398/Styckr/Untitled_design_o5b62v.png"
             alt="hub"
             width="20px"
             height="20px"
         /></a>
-        <a href="https://www.linkedin.com/in/sam-ortega-66677921a/"
+        <a href="https://www.linkedin.com/in/sam-ortega-66677921a/" class='please'
           >Linkedin Link
           <img
             src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101453/Styckr/Untitled_design_1_eohmqp.png"
@@ -51,9 +56,10 @@
         <h2>Projects!</h2>
 
         <h3>Stellar Note Nov 2021</h3>
-        <a href="https://stellar-note.herokuapp.com/">Stellar Note Live Link</a
+        <img src='https://res.cloudinary.com/dzjkwepju/image/upload/v1638485990/Styckr/Screenshot_2021-12-02_170921_ydzeli.png' alt='stellar' width='800px' height='500px' />
+        <a class='please' href="https://stellar-note.herokuapp.com/">Stellar Note Live Link</a
         ><br />
-        <a href="https://github.com/Alsm867/StellarNote">Repo Link</a>
+        <a class='please' href="https://github.com/Alsm867/StellarNote">Repo Link</a>
         <p>
           This is my clone of Evernote with Express, React, and redux with a
           retro 80’s space theme. To match the notes with the notebook it
@@ -67,9 +73,10 @@
         </p>
 
         <h3>Angry Cloud Nov 2021</h3>
-        <a href="https://angry-cloud.herokuapp.com/">Angry Cloud Live Link</a
+        <img src='https://res.cloudinary.com/dzjkwepju/image/upload/v1638485996/Styckr/unknown_ljmpkt.png' alt='stellar' width='800px' height='500px' />
+        <a class='please' href="https://angry-cloud.herokuapp.com/">Angry Cloud Live Link</a
         ><br />
-        <a href="https://github.com/pstory721/soundCloudClone">Repo Link</a>
+        <a class='please' href="https://github.com/pstory721/soundCloudClone">Repo Link</a>
         <p>
           My group and I cloned SoundCloud using Python, React.js, Flask, and a
           theme of angry music. To render an api that persists throughout the
@@ -94,7 +101,7 @@
       </blockquote>
 
       <section class="left">
-        <a
+        <a class='please'
           href="https://drive.google.com/file/d/1L5FdCaHd2fdSGu_coiw209lz4jD1K1R5/view?usp=sharing"
           >Link To Resume</a
         >
