css does not want to work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       body {
         background-color: rgb(119, 89, 49);
       }
+      .please{
+  text-decoration: none;
+  color: blue;
+}
       </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Portfolio</title>
