--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           websites. I'm a team player, and take charge when it's needed. The
           unknown is does not intimidate me. In fact I love the challenge and
           welcome it.
-          <a href="https://github.com/Alsm867" class='please'
+          <a style="text-decoration:none" href="https://github.com/Alsm867" class='please'
           >My G-hub Link<img
             src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101398/Styckr/Untitled_design_o5b62v.png"
             alt="hub"
