added skills and resume pdf

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
       type="image/svg+xml"
       href="https://res.cloudinary.com/dzjkwepju/image/upload/v1638554495/Styckr/S_2_l5vhdr.png"
     />
-    <link rel='stylesheet' href='style.css'/>
+    <link rel="stylesheet" href="style.css" />
     <style>
       body {
         background-color: rgb(119, 89, 49);
       }
-      .please{
-  text-decoration: none;
-  color: blue;
-}
-      </style>
+      .please {
+        text-decoration: none;
+        color: blue;
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Portfolio</title>
   </head>
@@ -39,32 +39,62 @@
           websites. I'm a team player, and take charge when it's needed. The
           unknown is does not intimidate me. In fact I love the challenge and
           welcome it.
-          <a style="text-decoration:none" href="https://github.com/Alsm867" class='please'
-          >My G-hub Link<img
-            src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101398/Styckr/Untitled_design_o5b62v.png"
-            alt="hub"
-            width="20px"
-            height="20px"
-        /></a>
-        <a href="https://www.linkedin.com/in/sam-ortega-66677921a/" class='please'
-          >Linkedin Link
-          <img
-            src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101453/Styckr/Untitled_design_1_eohmqp.png"
-            alt="linked"
-            width="20px"
-            height="20px"
-        /></a>
+          <a href='file:///C:/Users/orteg/Downloads/Copy%20of%20Ortega_Samuel_Resume.pdf' download>Download my resume</a>
+          <a
+            style="text-decoration: none"
+            href="https://github.com/Alsm867"
+            class="please"
+            >My G-hub Link<img
+              src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101398/Styckr/Untitled_design_o5b62v.png"
+              alt="hub"
+              width="20px"
+              height="20px"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/sam-ortega-66677921a/"
+            class="please"
+            >Linkedin Link
+            <img
+              src="https://res.cloudinary.com/dzjkwepju/image/upload/v1637101453/Styckr/Untitled_design_1_eohmqp.png"
+              alt="linked"
+              width="20px"
+              height="20px"
+          /></a>
         </p>
       </section>
 
       <section class="light">
-        <h2>Projects!</h2>
+        <h2>Projects / Skills</h2>
+
+        <h3>Skills</h3>
+
+        <ul>
+          <li>React.js / Redux.js</li>
+          <li>Javascript</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>SQL</li>
+          <li>Sequelize</li>
+          <li>Python</li>
+          <li>Express.js</li>
+          <li>SQLAlchemy</li>
+          <li>Flask.py</li>
+          <li>pug</li>
+        </ul>
 
         <h3>Stellar Note Nov 2021</h3>
-        <img src='https://res.cloudinary.com/dzjkwepju/image/upload/v1638485990/Styckr/Screenshot_2021-12-02_170921_ydzeli.png' alt='stellar' width='800px' height='500px' />
-        <a class='please' href="https://stellar-note.herokuapp.com/">Stellar Note Live Link</a
+        <img
+          src="https://res.cloudinary.com/dzjkwepju/image/upload/v1638485990/Styckr/Screenshot_2021-12-02_170921_ydzeli.png"
+          alt="stellar"
+          width="800px"
+          height="500px"
+        />
+        <a class="please" href="https://stellar-note.herokuapp.com/"
+          >Stellar Note Live Link</a
         ><br />
-        <a class='please' href="https://github.com/Alsm867/StellarNote">Repo Link</a>
+        <a class="please" href="https://github.com/Alsm867/StellarNote"
+          >Repo Link</a
+        >
         <p>
           This is my clone of Evernote with Express, React, and redux with a
           retro 80’s space theme. To match the notes with the notebook it
@@ -78,10 +108,18 @@
         </p>
 
         <h3>Angry Cloud Nov 2021</h3>
-        <img src='https://res.cloudinary.com/dzjkwepju/image/upload/v1638485996/Styckr/unknown_ljmpkt.png' alt='stellar' width='800px' height='500px' />
-        <a class='please' href="https://angry-cloud.herokuapp.com/">Angry Cloud Live Link</a
+        <img
+          src="https://res.cloudinary.com/dzjkwepju/image/upload/v1638485996/Styckr/unknown_ljmpkt.png"
+          alt="stellar"
+          width="800px"
+          height="500px"
+        />
+        <a class="please" href="https://angry-cloud.herokuapp.com/"
+          >Angry Cloud Live Link</a
         ><br />
-        <a class='please' href="https://github.com/pstory721/soundCloudClone">Repo Link</a>
+        <a class="please" href="https://github.com/pstory721/soundCloudClone"
+          >Repo Link</a
+        >
         <p>
           My group and I cloned SoundCloud using Python, React.js, Flask, and a
           theme of angry music. To render an api that persists throughout the
@@ -95,18 +133,18 @@
           deleting a comment we used Redux state to automatically listen for
           those changes to dynamically render them.
         </p>
-
       </section>
 
       <blockquote>
         <p>
-          "Sometimes people fail, and that's okay. What matters is that you
-          keep trying." <br />-Sam Ortega
+          "Sometimes people fail, and that's okay. What matters is that you keep
+          trying." <br />-Sam Ortega
         </p>
       </blockquote>
 
       <section class="left">
-        <a class='please'
+        <a
+          class="please"
           href="https://drive.google.com/file/d/1L5FdCaHd2fdSGu_coiw209lz4jD1K1R5/view?usp=sharing"
           >Link To Resume</a
         >
@@ -151,7 +189,5 @@
         <p>Thank you for visiting my portfolio!</p>
       </blockquote>
     </main>
-
-
   </body>
 </html>
