forgot to add style to it

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           websites. I'm a team player, and take charge when it's needed. The
           unknown is does not intimidate me. In fact I love the challenge and
           welcome it.
-          <a href='file:///C:/Users/orteg/Downloads/Copy%20of%20Ortega_Samuel_Resume.pdf' download>Download my resume</a>
+          <a style="text-decoration: none" href='file:///C:/Users/orteg/Downloads/Copy%20of%20Ortega_Samuel_Resume.pdf' download>Download my resume</a>
           <a
             style="text-decoration: none"
             href="https://github.com/Alsm867"
