it just takes you to the link but it wont download

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           websites. I'm a team player, and take charge when it's needed. The
           unknown is does not intimidate me. In fact I love the challenge and
           welcome it.
-          <a style="text-decoration: none" href='https://drive.google.com/file/d/1L5FdCaHd2fdSGu_coiw209lz4jD1K1R5/view?usp=sharing' download='Ortega_Samuel_Resume'>Download my resume</a>
+          <a style="text-decoration: none" href='https://drive.google.com/file/d/1L5FdCaHd2fdSGu_coiw209lz4jD1K1R5/view?usp=sharing' download>Download my resume</a>
           <a
             style="text-decoration: none"
             href="https://github.com/Alsm867"
