this is getting stressful

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
           welcome it.
           <a
             style="text-decoration: none"
-            href="/
-          v1638987652/Styckr/Copy_of_Ortega_Samuel_Resume_oyrcbt.pdf"
+            href="C:/Users/orteg/Downloads/Copy%20of%20Ortega_Samuel_Resume.pdf"
             download
             >Download my resume</a
           >
