--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           welcome it.
           <a
             style="text-decoration: none"
-            href="Users/orteg/Downloads/Copy%20of%20Ortega_Samuel_Resume.pdf"
+            href="./Copy of Ortega_Samuel_Resume.pdf"
             download
             >Download my resume</a
           >
