pet overflow was added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
           deleting a comment we used Redux state to automatically listen for
           those changes to dynamically render them.
         </p>
+
+        <h3>Pet-Overflow Oct, 2021</h3>
+        <img
+          src="https://res.cloudinary.com/dzjkwepju/image/upload/v1641823228/Styckr/Screenshot_2022-01-10_085944_tfcegp.png"
+          alt="pet-overflow"
+          width="800px"
+          height="500px"
+        />
+        <a class="please" href="https://pet-overflow.herokuapp.com/"
+          >Pet-Overflow Live Link</a
+        ><br />
+        <a class="please" href="https://github.com/spacegray/pet-overflow"
+          >Repo Link</a
+        >
+        <p>
+          My group and I cloned StackOverflow using vanilla javascript, pug, and
+          express. Our website has a theme of pets and pet related questions. We
+          utilized Op.iLike to implement a functional search bar so users can
+          search for topics, specific types of pets, and search questions. The
+          user can ask a question and others can post their answers to those
+          questions, as well as up-vote or down-vote the question itself or the
+          answers to those questions.
+        </p>
       </section>
 
       <blockquote>
