made a change to the about part

--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
       <section>
         <h2>About Me!</h2>
         <p>
-          I am passionate about learning something new. I took the 24 week
-          course at App Academy, where I learned various coding languages and
-          skills, and I utilized what I learned to create fully functional
-          websites. I'm a team player, and take charge when it's needed. The
-          unknown is does not intimidate me. In fact I love the challenge and
-          welcome it.
+          Programming was never first on my list. I was intimidated by it, so
+          why have it on my list in the first place, right? I always thought it
+          was interesting, but never took a second thought about trying to learn
+          it. That is, until I had seen what the machines could do at my last
+          job. We built office furniture and I noticed the machines would bore
+          holes into parts at precise locations and at precise depths. It amazed
+          me how they knew what to do and when to do their job. After that, I
+          started asking questions about everything. How does a video game do
+          what it does? How does a website display certain info or have buttons
+          that do certain actions? I decided to seek answers to these questions
+          by looking up videos and eventually looking for a school or program to
+          learn all of this, and I can’t wait to utilize what I’ve learned!
           <a
             style="text-decoration: none"
             href="./Copy of Ortega_Samuel_Resume.pdf"
