i forgot some commas

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <li>pug</li>
         </ul>
 
-        <h3>Stellar Note Nov 2021</h3>
+        <h3>Stellar Note Nov, 2021</h3>
         <img
           src="https://res.cloudinary.com/dzjkwepju/image/upload/v1638485990/Styckr/Screenshot_2021-12-02_170921_ydzeli.png"
           alt="stellar"
@@ -118,7 +118,7 @@
           saving their notes.
         </p>
 
-        <h3>Angry Cloud Nov 2021</h3>
+        <h3>Angry Cloud Nov, 2021</h3>
         <img
           src="https://res.cloudinary.com/dzjkwepju/image/upload/v1638485996/Styckr/unknown_ljmpkt.png"
           alt="stellar"
