made a correction on portfolio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <header>
         <h1>Samuel Ortega</h1>
-        <p>Welcom To My Portfolio Website!</p>
+        <p>Welcome to my Portfolio Website!</p>
       </header>
 
       <section>
