updated to my current resume

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           learn all of this, and I can’t wait to utilize what I’ve learned!
           <a
             style="text-decoration: none"
-            href="./Copy of Ortega_Samuel_Resume.pdf"
+            href="./Ortega_Samuel_Resume.pdf"
             download
             >Download my resume</a
           > |
