--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
 
         <h3>Stellar Note Nov, 2021</h3>
         <img
+          class="stellar"
           src="https://res.cloudinary.com/dzjkwepju/image/upload/v1638485990/Styckr/Screenshot_2021-12-02_170921_ydzeli.png"
-          alt="stellar"
-          width="800px"
-          height="500px"
-        /><br></br>
+          alt="stellar"/><br></br>
         <a class="please" href="https://stellar-note.herokuapp.com/"
           >Stellar Note Live Link</a
         ><br />
@@ -120,10 +118,9 @@
 
         <h3>Angry Cloud Nov, 2021</h3>
         <img
+          class="angry"
           src="https://res.cloudinary.com/dzjkwepju/image/upload/v1641918275/Styckr/Screenshot_2022-01-11_112417_ph3ixq.png"
           alt="stellar"
-          width="800px"
-          height="500px"
         /><br></br>
         <a class="please" href="https://angry-cloud.herokuapp.com/"
           >Angry Cloud Live Link</a
@@ -147,10 +144,9 @@
 
         <h3>Pet-Overflow Oct, 2021</h3>
         <img
+          class="pet"
           src="https://res.cloudinary.com/dzjkwepju/image/upload/v1641823228/Styckr/Screenshot_2022-01-10_085944_tfcegp.png"
           alt="pet-overflow"
-          width="800px"
-          height="500px"
         /><br></br>
         <a class="please" href="https://pet-overflow.herokuapp.com/"
           >Pet-Overflow Live Link</a
@@ -168,14 +164,6 @@
           answers to those questions.
         </p>
       </section>
-
-      <blockquote>
-        <p>
-          "Sometimes people fail, and that's okay. What matters is that you keep
-          trying." <br />-Sam Ortega
-        </p>
-      </blockquote>
-
       <section class="left">
         <a
           class="please"
