trying to fix the text popping out of the bottom and added most recent employer

--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
         >
         <h2>Work History</h2>
 
+        <h3>LG Chem</h3>
+        <p>
+          I worked on the quality assurance team where we would inspect the x-rays of car
+          batteries looking for defects or flaws on them. We mainly looked for tears in the
+          cells fo the batteries. If a cell had a tear it would function properly and will fail
+          once the car was being tested. 
+        </p>
+
         <h3>Herman Miller</h3>
         <p>
           I started as an assembly line worker where I learned all the positions
